--- a/TypeScript/ts-all-in-one/package.json
+++ b/TypeScript/ts-all-in-one/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "typescript": "^4.8.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
