--- a/TypeScript/ts-all-in-one/package.json
+++ b/TypeScript/ts-all-in-one/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "jquery": "^3.6.4",
+    "redux": "^4.2.1",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16"
+    "@types/jquery": "^3.5.16",
+    "@types/react": "^18.0.28"
   }
 }
