--- a/TypeScript/ts-all-in-one/package.json
+++ b/TypeScript/ts-all-in-one/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.3.4",
     "jquery": "^3.6.4",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
