--- a/TypeScript/ts-all-in-one/package.json
+++ b/TypeScript/ts-all-in-one/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "express": "^4.18.2",
     "jquery": "^3.6.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
@@ -18,7 +19,9 @@
     "typescript": "^4.8.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jquery": "^3.5.16",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.28"
   }
 }
