--- a/TypeScript/ts-all-in-one/package.json
+++ b/TypeScript/ts-all-in-one/package.json
@@ -11,17 +11,26 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jquery": "^3.6.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jquery": "^3.5.16",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.28"
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
+    "@types/react": "^18.0.28",
+    "react-native": "^0.71.6"
   }
 }
